# ollama-tui

./: .rusty-hook.toml  Cargo.toml  rustfmt.toml
src/: app.rs  main.rs  models.rs  state.rs
