[package]
name = "ollama-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.1"
ron = "0.8.1"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
